# alfaresult

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
incl/: dSOF.hpp  failure.hpp  nullclass.hpp  result.hpp  success.hpp
tests/: main.cpp
